feat: split command
Signed-off-by: Alexander <alexanderklush8@gmail.com>